--- a/report.html
+++ b/report.html
@@ -192,7 +192,7 @@
 
     const group2Stations = [
       'สภ.บ้านเขว้า','สภ.หนองบัวระหว','สภ.จัตุรัส','สภ.ซับใหญ่','สภ.บำเหน็จณรงค์',
-      'สภ.เนินสง่า','สภ.เทพสถิต','สภ.อภักดีชุมพล','สภ.บ้านค่าย','สภ.ลาดใหญ่',
+      'สภ.เนินสง่า','สภ.เทพสถิต','สภ.ภักดีชุมพล','สภ.บ้านค่าย','สภ.ลาดใหญ่',
       'สภ.วังตะเฆ่','สภ.หัวทะเล','สภ.หนองบัวโคก'
     ];
 
