--- a/report.html
+++ b/report.html
@@ -82,7 +82,7 @@
 
     <form
       id="reportForm"
-      action="https://script.google.com/macros/s/AKfycby_gA0vodN6ZEIXVeut-RNUO7GrVaT1hdqnUDWi-EQ1gTsLt1TdQTlhAOxvpXvdH5A-iw/exec"
+      action=https://script.google.com/macros/s/AKfycbyiuU10tm3YouDhv-DBlJE2kVt9MboD9mPOr_cU_r6fjgq-jLZw4eHOPSsb1e4bl_tK9Q/exec"
       method="post"
       enctype="multipart/form-data"
     >
@@ -234,3 +234,4 @@
   </script>
 </body>
 </html>
+
